Task-#95 -- Added unit tests for deleteCourseById to remove a course by a given courseId